@@ -2,9 +2,6 @@ Next:
 * figure out if there are still any mirrors, and then what and how
   to mirror the new setup
 * do the file searching for generating a domain page in a smarter way
-* on the domain pages, do not show the email address from the PO file,
-  but use the current email address of the translator; only if the
-  translator is no longer team member, then use the PO file email addres
 
 Just before going live:
 * run mirror_tp_data.py one last time, and clean up after it
@@ -12,6 +9,7 @@ Just before going live:
 * remove the spurious site/latest/coreutils/messages.mo
 * run calc-postats -uv  to make sure all POs are statted 
 * run cv-symlinks.sh  to convert trans and teams to PO-files symlinks
+* run po-tidy-links -n  to inspect state of links, then create missing ones
 * run make-package-links.sh  to create a second hierarchy of symlinks
 * run generate_pages -idt  to regenerate domain and team pages
 * change the robot directive in layout.html.in to "index,follow"
