@@ -11,6 +11,9 @@
 	* bin/create-mail-aliases, registry/Makefile: Also create a procmailrc
 	file with rules to reach team lists.
 
+	* lib/localweb.py: On the domain pages, use the translator's current
+	email address when it exists, instead of the one from the PO file.
+
 2007-06-24  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* lib/htmlpage.py: Give each HTML page a Content-Type meta header tag,
